log

Thu 14 Mar 2024 02:55:45 PM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++-----
 1 file changed, 30 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   29 |   for (int i = size - 1; i < 0; i--)
      |   ^~~
exercises.c:31:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   31 |     x++;
      |     ^
exercises.c:27:7: error: variable ‘invertido’ set but not used [-Werror=unused-but-set-variable]
   27 |   int invertido[size];
      |       ^~~~~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:46:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   46 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:61:1: error: expected expression before ‘}’ token
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e2c59d0
Thu 14 Mar 2024 02:56:58 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:7: error: variable ‘invertido’ set but not used [-Werror=unused-but-set-variable]
   27 |   int invertido[size];
      |       ^~~~~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:46:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   46 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:61:1: error: expected expression before ‘}’ token
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
248accb
Thu 14 Mar 2024 02:59:44 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:3: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   29 |   for (int i = size - 1; i < 0; i--)
      |   ^~~
exercises.c:31:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   31 |     x++;
      |     ^
exercises.c:27:7: error: variable ‘invertido’ set but not used [-Werror=unused-but-set-variable]
   27 |   int invertido[size];
      |       ^~~~~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:44:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:46:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   46 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:61:1: error: expected expression before ‘}’ token
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3ac4f2
Thu 14 Mar 2024 03:02:19 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:7: error: variable ‘invertido’ set but not used [-Werror=unused-but-set-variable]
   27 |   int invertido[size];
      |       ^~~~~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:45:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   45 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:47:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:62:1: error: expected expression before ‘}’ token
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fe9c7c0
Thu 14 Mar 2024 03:04:22 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   47 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:49:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   49 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:64:1: error: expected expression before ‘}’ token
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a834ff4
Thu 14 Mar 2024 03:04:55 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   46 |     if(arr[i] % 2 == 0)
      |     ^~
exercises.c:48:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   48 |       newSize++;
      |       ^~~~~~~
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:64:1: error: expected expression before ‘}’ token
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32c9f54
Thu 14 Mar 2024 03:05:11 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:1: error: expected expression before ‘}’ token
   65 | }
      | ^
Compilation failed
2c8e7f4
Thu 14 Mar 2024 03:05:31 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:65:1: error: expected expression before ‘}’ token
   65 | }
      | ^
Compilation failed
83d1dc1
Thu 14 Mar 2024 03:07:46 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
6b37085
Thu 14 Mar 2024 03:11:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
0247d3d
Thu 14 Mar 2024 03:12:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d41c319
Thu 14 Mar 2024 03:12:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c2cfac5
Thu 14 Mar 2024 03:13:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
e7ddc3a
